[package]
name = "conduit2"
version = "0.1.0"
authors = ["Arvid E. Picciani <aep@exys.org>"]
edition = "2018"

[dependencies]
tinylogger          = "0.1"
carrier             = {path ="../carrier2"}
osaka               = "0.2"
sha2                = "0.7"
log                 = "0.4"
prost               = "0.4.0"
