[package]
name = "conduit2"
version = "0.2.0"
authors = ["Arvid E. Picciani <aep@exys.org>", "Alex Zarudnyy <hedgar2017@gmail.com>"]
edition = "2018"

[dependencies]
log                 = "0.4"
env_logger          = "0.6.0"
failure             = "0.1.5"
serde               = "1.0.84"
serde_json          = "1.0.36"
serde_derive        = "1.0.84"
carrier             = { path = "../carrier2" }
osaka               = "0.2"
actix-web           = "0.7.18"
